Fixed off center social footer

--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,12 @@
 html {
   text-align: center;
 }
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  float: left;
+  padding: 25px;
+}
